created the backend server, added routes, data now coming from the backedn

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shopping cart app using mern stack",
   "main": "index.js",
   "scripts": {
-    "test": "]"
+    "start": "node backend/server"
   },
   "repository": {
     "type": "git",
